.gitignore Fixed maybe

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-/othello-venv/**
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+othello-venv/Lib/**    
 
