--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,5 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-othello-venv/Lib/**    
+othello-venv/**
 
